# ephemeral-execution-engine

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
core/: constants.py  shared_memory.py  task.py  telemetry.py
docs/: index.html  latency_baseline_report.txt
edge/: admission.py  circuit_breaker.py  main.py  resilient_client.py  routing_client.py
ember/: __main__.py
proto/: ember.proto
regional/: main.py  routing_server.py
tests/steel_thread/: chaos_server.py  test_admission.py  test_circuit_breaker.py  test_latency_baseline.py  test_local_substrate.py
workers/: lease_manager.py  pool.py
