[project]
name = "ephemeral-execution-engine"
version = "0.1.0"
description = "Predictable compute for an energy-constrained world."
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "steel_thread: end-to-end Phase 3 validation tests",
    "unit: isolated unit tests",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true